--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
 }
+
 /* .Header{
   display: flex;
   justify-content: space-between;
@@ -11,3 +12,14 @@
   height: 100%;
   border: 1px solid #333;
 } */
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@100;200;400;500;600;700;800&display=swap');
+
+body {
+    font-family: 'Roboto', 'sans-serif';
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+a {
+    text-decoration: none !important;
+}
