--- a/src/Components/Layout/DefaultLayout/DefaultLayout.module.scss
+++ b/src/Components/Layout/DefaultLayout/DefaultLayout.module.scss
@@ -11,7 +11,7 @@
     object-fit: cover;
     background-repeat: no-repeat;
 }
-.content {
+.content_main {
     width: 100%;
     margin: 0 auto;
 }
