--- a/src/Components/Layout/DefaultLayout/Header/header.module.scss
+++ b/src/Components/Layout/DefaultLayout/Header/header.module.scss
@@ -34,7 +34,16 @@
         list-style: none;
 
         .menu-list_item {
+            text-decoration: none;
+            color: #fff;
             margin-right: 30px;
+            padding: 0 5px;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+            cursor: pointer;
+            &:hover {
+                background-color: #ff6633;
+            }
         }
     }
 }
@@ -44,6 +53,13 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
+
+    .profile_info {
+        display: flex;
+        cursor: pointer;
+        align-items: center;
+        margin-right: 20px;
+    }
     .profile-picture {
         width: 32px;
         height: 32px;
@@ -51,7 +67,10 @@
         border-radius: 50%;
     }
     .profile_text-container {
-        margin: 0 20px;
+        margin-left: 10px;
+        .icon_bars {
+            margin-left: 4px;
+        }
     }
 }
 .toggle {
@@ -77,6 +96,34 @@
         cursor: pointer;
     }
 }
+
+// Menu_settings-box
+.Menu_settings-box {
+    background-color: #fff;
+    margin-top: 2px;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    border-radius: 5px;
+    animation: fadeIn ease-in-out 0.5s;
+    .menu_setting-item {
+        padding: 5px 10px;
+        color: black;
+
+        &:hover {
+            background-color: #ccc;
+        }
+    }
+}
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
 @media screen and (max-width: 1120px) {
     .navbar {
         display: none;
