--- a/src/Components/Layout/DefaultLayout/SideBar/Sidebar.module.scss
+++ b/src/Components/Layout/DefaultLayout/SideBar/Sidebar.module.scss
@@ -3,23 +3,66 @@
     top: 0;
     z-index: 100;
     width: 50px;
-    color: #fff;
+    overflow: hidden;
+    align-items: flex-start;
     height: 100%;
     background-color: black;
     display: flex;
     flex-direction: column;
-    align-items: center;
     padding-top: 60px;
+    padding-left: 0;
+    animation: fadeIn ease-in-out 0.5s;
+    transition: all ease-in-out 0.8s;
+
+    .icon_close {
+        position: absolute;
+        font-size: 25px;
+        cursor: pointer;
+        color: #fff;
+        right: 20px;
+        top: 20px;
+    }
 
     .sidebar_item {
-        color: #fff;
         display: flex;
         align-items: center;
-        margin-right: 3px;
-        margin-bottom: 50px;
+        margin-bottom: 42px;
 
         .left_menu-icon {
+            display: flex;
+            width: 50px;
+            height: 30px;
+            justify-content: center;
+            align-items: center;
             font-size: 20px;
+            color: #fff;
         }
+        .profile-picture {
+            width: 32px;
+            height: 32px;
+            object-fit: cover;
+            border-radius: 50%;
+            cursor: pointer;
+        }
+    }
+
+    span {
+        color: #fff;
+        transition: color 0.3s;
+    }
+
+    .sidebar_item:hover span {
+        color: #ff6600;
+    }
+}
+
+@keyframes moveToWidth {
+    from {
+        width: 290px;
+        opacity: 0;
+    }
+    to {
+        width: 50px;
+        opacity: 1;
     }
 }
