--- a/src/Page/MovieDetail/MovieDetail.module.scss
+++ b/src/Page/MovieDetail/MovieDetail.module.scss
@@ -1,13 +1,13 @@
 .DetailFilm {
-    max-width: 1400px;
-    margin-top: 60px;
-    margin-bottom: 60px;
+    padding-bottom: 60px;
     margin-left: auto;
     margin-right: auto;
     overflow: hidden;
     display: flex;
     min-height: 185vh;
+    padding-left: 49px;
     flex-direction: column;
+    background-color: #151515;
 }
 .top_main-image {
     width: 100%;
@@ -83,7 +83,7 @@
             color: #fff;
             .star_icon {
                 margin-right: 4px;
-                color: yellow;
+                color: #ffcc00;
             }
         }
     }
@@ -97,12 +97,13 @@
 
             .title {
                 font-size: 17px;
-                color: darkgoldenrod;
+                color: #fff;
                 font-weight: 700;
                 margin-bottom: 10px;
             }
             .description {
                 display: block;
+                color: #cccccc;
                 margin-bottom: 0;
                 font-size: 16px;
                 display: -webkit-box;
@@ -127,7 +128,7 @@
 
                 .title {
                     font-weight: 600;
-                    color: #808080;
+                    color: #fff;
                     margin-bottom: 10px;
                 }
 
@@ -140,6 +141,9 @@
                         height: 40px;
                         border-radius: 50%;
                         object-fit: cover;
+                    }
+                    .writer {
+                        color: #cccccc;
                     }
                 }
             }
@@ -215,7 +219,7 @@
         }
     }
 }
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 530px) {
     .left_main-content-mobile {
         position: absolute;
         display: flex;
@@ -279,7 +283,7 @@
     border-top: 1px solid #ccc;
     h4 {
         font-size: 18px;
-        color: #777777;
+        color: #eeeeee;
         font-weight: 400;
         margin-bottom: 12px;
     }
@@ -313,14 +317,36 @@
     width: 100%;
     height: 350px;
     box-shadow: 0 0 5px #aaaaaaaa;
-}
-.item_image {
-    width: 100%;
-    height: 290px;
-    overflow: hidden;
-    .image_movie {
+    .item_image {
         width: 100%;
-        height: 100%;
-        object-fit: cover;
+        height: 290px;
+        overflow: hidden;
+        .image_movie {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+    .infor_item-movie {
+        height: 60px;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        align-items: center;
+        background-color: black;
+        .title_movie-item {
+            color: #fff;
+            max-width: 160px;
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+        }
+        .actor_movie-item {
+            color: #999999;
+            max-width: 200px;
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+        }
     }
 }
