--- a/src/Page/WatchMovie/WatchMovie.module.scss
+++ b/src/Page/WatchMovie/WatchMovie.module.scss
@@ -1,62 +1,43 @@
 .container {
     border-radius: 5px;
     overflow: hidden;
-    width: 1060px;
-    margin: auto;
-    padding: 0 15px;
-    margin-top: 70px;
-    display: flex;
-}
-
-.content_watch {
-    width: 670px;
-    border-radius: 5px;
-    padding: 10px;
-    background-color: #1a1a1a;
-    min-height: 200px;
-}
-.info_watch {
-    display: flex;
     width: 100%;
-    height: 200px;
+    padding-left: 50px;
+    min-height: 185vh;
+    background-color: #151515;
+}
+.main_film {
+    max-width: 1020px;
+    position: relative;
+    max-height: 510px;
+    margin: 0 auto;
+    background-color: yellow;
 
-    img {
-        width: 148px;
-        height: 190px;
-        border-radius: 3px;
-        object-fit: cover;
-    }
-    .info {
-        margin-left: 10px;
-        padding: 0 5px;
-        height: 100%;
-        overflow: hidden;
+    .player_video {
         width: 100%;
-        background-color: #1a1a1a;
-
-        .title {
-            font-size: 26px;
-            color: #fff;
-        }
-        .description {
-            font-size: 16px;
-            color: #ccc;
-        }
-
-        .detai_watch {
-            margin-top: 10px;
-            height: 110px;
-            background-color: #222222;
-            padding: 5px;
-
-            span {
-                color: #ccc;
-                font-size: 14px;
-            }
-        }
+        height: 100%;
+        background-color: black;
     }
 }
-.film_watch-now {
-    width: 100%;
-    height: 365;
+.button_skip {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: transparent;
+    border: 2px solid #ccc;
+    overflow: hidden;
+    box-shadow: 0 0 5px #aaaaaaaa;
+
+    button {
+        width: 100%;
+        height: 100%;
+        background-color: transparent;
+        border: none;
+        color: #fff;
+        font-weight: 700;
+        outline: none;
+    }
 }
