--- a/src/Components/Layout/DefaultLayout/Footer/footer.module.scss
+++ b/src/Components/Layout/DefaultLayout/Footer/footer.module.scss
@@ -3,8 +3,10 @@
     max-width: 100%;
     bottom: 0;
     left: 0;
+    padding-left: 50px;
     max-height: 306px;
     box-shadow: 0 0 5px #aaaaaa;
+    background-color: black;
 }
 .footer_container {
     max-width: 1200px;
