--- a/src/Page/WatchMovie/WatchMovie.module.scss
+++ b/src/Page/WatchMovie/WatchMovie.module.scss
@@ -1,28 +1,99 @@
 .container {
-    border-radius: 5px;
     overflow: hidden;
     width: 100%;
     padding-left: 50px;
     min-height: 185vh;
     background-color: #151515;
 }
+
 .main_film {
-    max-width: 1020px;
-    position: relative;
-    max-height: 510px;
+    max-width: 962px;
     margin: 0 auto;
-    background-color: yellow;
+    background-color: #222222;
+    padding-top: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+
+    .link_advisement {
+        width: 100%;
+        text-decoration: none;
+
+        img {
+            width: 100%;
+            // height: 90px;
+            object-fit: cover;
+            margin-bottom: 10px;
+        }
+
+        .advisement_F8 {
+            width: 100%;
+            object-fit: cover;
+        }
+    }
+
+    .main_content-type {
+        width: 100%;
+        position: relative;
+    }
 
     .player_video {
         width: 100%;
-        height: 100%;
+        max-height: 540px;
+
         background-color: black;
+    }
+
+    .group_setting {
+        padding-bottom: 20px;
+        padding-top: 20px;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        .group_btn {
+            border: 1px solid #fff;
+            display: flex;
+            padding-top: 4px;
+            padding-bottom: 4px;
+            padding-left: 10px;
+
+            border-radius: 3px;
+
+            .change_server {
+                background-color: #ff9966;
+                color: black;
+            }
+            .PM_FAST {
+                color: #996600;
+                background-color: #ffcc00;
+            }
+        }
+
+        button {
+            padding: 5px;
+            background-color: black;
+            color: #fff;
+            border-radius: 3px;
+            border: none;
+            outline: none;
+            cursor: pointer;
+            margin-right: 10px;
+        }
+    }
+    .separate {
+        width: 99%;
+        border-radius: 5px;
+        margin-top: 0;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 20px;
+        height: 15px;
+        background-color: #333333;
     }
 }
 .button_skip {
     position: absolute;
-    top: 10px;
-    right: 10px;
+    top: 20px;
+    right: 20px;
     width: 50px;
     height: 50px;
     border-radius: 50%;
@@ -39,5 +110,102 @@
         color: #fff;
         font-weight: 700;
         outline: none;
+    }
+}
+
+// express_opinion-movie
+.express_opinion-movie {
+    h3 {
+        font-size: 20px;
+        color: #f78144;
+        margin: 0;
+        font-weight: 400;
+    }
+    span {
+        color: #dddddd;
+        font-size: 14px;
+        font-weight: 300;
+    }
+    .star_group {
+        display: flex;
+        margin: 8px 0;
+        .icon_star {
+            color: #cc9900;
+        }
+    }
+    .button_feelings {
+        display: flex;
+        button {
+            padding: 0px 10px;
+            border-radius: 5px;
+            color: #fff;
+            background-color: #1877f2;
+            margin-right: 10px;
+        }
+    }
+    .button_save {
+        .icon_save {
+            margin-right: 4px;
+        }
+
+        margin-top: 10px;
+        background-color: #fff;
+        color: #4267b2;
+        display: flex;
+        align-items: center;
+        text-align: center;
+        font-size: 13px;
+        font-weight: 600;
+        padding: 5px 10px;
+        border-radius: 5px;
+        justify-content: center;
+    }
+    .title_movie {
+        margin-top: 20px;
+        font-size: 28px;
+        color: #ff9601;
+        margin-bottom: 0;
+    }
+    .director {
+        color: #fff;
+        margin-top: 4px;
+        font-size: 16px;
+    }
+    .description_movie {
+        padding: 4px 4px;
+        margin: 5px 0 20px 0;
+        color: #bbb;
+        background-color: #322b2b;
+
+        .descibe_item {
+            display: block;
+            display: -webkit-box;
+            line-height: 2.1;
+            margin-bottom: 0;
+            height: 12px * 2.1 * 3;
+            font-size: 12px;
+            -webkit-line-clamp: 3; /* số dòng hiển thị */
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+        a {
+            font-size: 12px;
+        }
+    }
+}
+
+@media screen and (max-width: 465px) {
+    .group_setting {
+        justify-content: flex-start !important;
+        padding-bottom: 10px !important;
+        padding-top: 10px !important;
+    }
+    .group_btn {
+        flex-direction: column;
+        button {
+            margin-right: 0;
+            margin-bottom: 10px;
+        }
     }
 }
