--- a/src/Components/Layout/DefaultLayout/DefaultLayout.module.scss
+++ b/src/Components/Layout/DefaultLayout/DefaultLayout.module.scss
@@ -1,5 +1,6 @@
 .container {
     // Node ở Đây Đã
+    position: relative;
     width: 100%;
     overflow: hidden;
     background: #fff;
@@ -8,6 +9,7 @@
     margin: 0 auto;
     display: flex;
     flex-direction: column;
+    min-height: 100vh;
     object-fit: cover;
     background-repeat: no-repeat;
 }
