--- a/src/Components/Layout/DefaultLayout/Footer/footer.module.scss
+++ b/src/Components/Layout/DefaultLayout/Footer/footer.module.scss
@@ -1,6 +1,6 @@
 .footer {
-    position: relative;
-    max-width: 100%;
+    position: absolute;
+    width: 100%;
     bottom: 0;
     left: 0;
     padding-left: 50px;
