--- a/src/Page/SingUpAndLogin/SignUpAndLogin.module.scss
+++ b/src/Page/SingUpAndLogin/SignUpAndLogin.module.scss
@@ -1,3 +1,6 @@
+.container {
+    min-height: 100vh;
+}
 .form_container {
     max-width: 400px;
     margin-top: 100px;
@@ -14,14 +17,6 @@
     padding: 20px 40px;
     border: 1px solid #eee;
     box-shadow: 0 0 20px #aaaaaa;
-}
-@keyframes fadeIn {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
 }
 
 // .form_center {
@@ -99,38 +94,7 @@
 .title {
     text-align: center;
 }
-.form_connect-social {
-    display: inline-flex;
-    margin-top: 30px;
-    margin-bottom: 20px;
-}
-.facebook {
-    width: 160px;
-    color: #fff;
-    display: flex;
-    padding: 10px 5px;
-    text-align: center;
-    align-items: center;
-    background-color: #3b5998;
-    .icon {
-        font-size: 18px;
-        margin-left: 20px;
-        margin-right: 10px;
-    }
-    border-radius: 5px;
-}
-.google {
-    margin-left: 20px;
-    width: 160px;
-    color: #fff;
-    padding: 10px 5px;
-    background-color: #fbbc05;
-    .icon {
-        font-size: 18px;
-        margin-right: 10px;
-    }
-    border-radius: 5px;
-}
+
 .info {
     display: flex;
     margin-top: 10px;
@@ -153,12 +117,9 @@
 }
 .btn_submit {
     padding: 10px 20px;
-    border-bottom-left-radius: 20px;
-    border-top-left-radius: 20px;
-    border-bottom-right-radius: 20px;
-    border-top-right-radius: 20px;
+    border-radius: 6px;
     width: 100%;
-    margin-top: 30px;
+    margin-top: 10px;
     color: #fff;
     background-color: #ff0000;
     border: none;
@@ -169,9 +130,140 @@
     text-align: center;
     margin-top: 30px;
 }
+.forgot_pass {
+    margin-top: 10px;
+}
 .box_tooltip {
     background-color: #222;
     color: #fff;
     padding: 10px 5px;
     border-radius: 5px;
+}
+
+//
+
+// Kết nối qua các ứng dụng
+.facebook_login {
+    display: flex;
+    width: 100%;
+    border-radius: 6px;
+    overflow: hidden;
+    margin-bottom: 10px;
+}
+.form_connect-social {
+    display: inline-flex;
+    margin-top: 30px;
+    flex-direction: column;
+    margin-bottom: 20px;
+}
+.facebook_icon {
+    width: 20%;
+    background-color: blue;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    color: #fff;
+    justify-content: center;
+}
+.facebook_css {
+    width: 280px;
+    text-align: left;
+    padding-left: 10px;
+    background-color: blue;
+    color: #fff;
+    height: 40px;
+}
+.google {
+    border-radius: 6px;
+    margin-left: 20px;
+    width: 160px;
+    color: #fff;
+    padding: 10px 5px;
+    background-color: #fbbc05;
+    .icon {
+        font-size: 18px;
+        margin-right: 10px;
+    }
+    border-radius: 5px;
+}
+
+// Form sending Email
+
+.form_sending-email {
+    max-width: 400px;
+    margin: 100px auto;
+    height: 300px;
+    background-color: #fff;
+    border-radius: 5px;
+    display: flex;
+    z-index: 500;
+    flex-direction: column;
+    animation: fadeIn ease-in-out 0.8s;
+    padding: 20px 40px;
+    border: 1px solid #eee;
+    box-shadow: 0 0 20px #aaaaaa;
+}
+.icon_mail {
+    font-size: 40px;
+}
+
+.text_forgot {
+    text-align: center;
+}
+.text_description {
+    text-align: center;
+    font-size: 18px;
+}
+.btn_sending-email {
+    padding: 10px 20px;
+    border-radius: 6px;
+    width: 100%;
+    margin-top: 10px;
+    color: #fff;
+    border: none;
+    outline: none;
+    background-color: #0099ff;
+}
+
+.option_other {
+    display: flex;
+    justify-content: space-between;
+
+    .come_login {
+        color: blue;
+        margin: 10px 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        cursor: pointer;
+
+        span {
+            margin-left: 8px;
+            margin-bottom: 4px;
+        }
+    }
+    .come_register {
+        color: blue;
+        margin: 10px 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        cursor: pointer;
+
+        span {
+            margin-bottom: 4px;
+            margin-right: 8px;
+        }
+    }
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
