--- a/src/Components/GlobalStyles/GlobalStyle.scss
+++ b/src/Components/GlobalStyles/GlobalStyle.scss
@@ -2,7 +2,10 @@
 :root {
     --primary-height: 56px;
     --primary-width: 1520px;
+    --primary-white: #fff;
+    --primary-black: black;
     --primary-search: #f2f2f2;
+    --primary-bg: #151515;
 }
 * {
     box-sizing: border-box;
