--- a/src/Components/Layout/DefaultLayout/DefaultLayout.module.scss
+++ b/src/Components/Layout/DefaultLayout/DefaultLayout.module.scss
@@ -3,13 +3,12 @@
     position: relative;
     width: 100%;
     overflow: hidden;
-    background: #fff;
+    background: var(--primary-bg);
     line-height: 1.428571429;
     border: none;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
     object-fit: cover;
     background-repeat: no-repeat;
 }
