--- a/src/Components/Layout/DefaultLayout/Header/header.module.scss
+++ b/src/Components/Layout/DefaultLayout/Header/header.module.scss
@@ -2,7 +2,7 @@
     width: 100%;
     z-index: 100;
     height: 50px;
-    background-color: black;
+    background-color: var(--primary-black);
 }
 
 .navbar_container {
@@ -14,7 +14,7 @@
     padding-left: 90px;
     padding-right: 40px;
     height: 100%;
-    color: #fff;
+    color: var(--primary-white);
 }
 .logo_container {
     flex: 1;
@@ -35,7 +35,7 @@
 
         .menu-list_item {
             text-decoration: none;
-            color: #fff;
+            color: var(--primary-white);
             margin-right: 30px;
             padding: 0 5px;
             border-radius: 5px;
@@ -79,7 +79,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background-color: #fff;
+    background-color: var(--primary-white);
     position: relative;
     border-radius: 30px;
 
@@ -89,7 +89,7 @@
     .toggle_ball {
         width: 18px;
         height: 18px;
-        background-color: black;
+        background-color: var(--primary-black);
         position: absolute;
         right: 1px;
         border-radius: 50%;
@@ -99,7 +99,7 @@
 
 // Menu_settings-box
 .Menu_settings-box {
-    background-color: #fff;
+    background-color: var(--primary-white);
     margin-top: 2px;
     overflow: hidden;
     display: flex;
@@ -108,7 +108,7 @@
     animation: fadeIn ease-in-out 0.5s;
     .menu_setting-item {
         padding: 5px 10px;
-        color: black;
+        color: var(--primary-black);
 
         &:hover {
             background-color: #ccc;
