--- a/src/Components/Layout/DefaultLayout/SideBar/Sidebar.module.scss
+++ b/src/Components/Layout/DefaultLayout/SideBar/Sidebar.module.scss
@@ -6,7 +6,7 @@
     overflow: hidden;
     align-items: flex-start;
     height: 100%;
-    background-color: black;
+    background-color: var(--primary-black);
     display: flex;
     flex-direction: column;
     padding-top: 60px;
@@ -18,7 +18,7 @@
         position: absolute;
         font-size: 25px;
         cursor: pointer;
-        color: #fff;
+        color: var(--primary-white);
         right: 20px;
         top: 20px;
     }
@@ -35,7 +35,7 @@
             justify-content: center;
             align-items: center;
             font-size: 20px;
-            color: #fff;
+            color: var(--primary-white);
         }
         .profile-picture {
             width: 32px;
@@ -47,7 +47,7 @@
     }
 
     span {
-        color: #fff;
+        color: var(--primary-white);
         transition: color 0.3s;
     }
 
