--- a/src/Page/Employee/Employee.module.scss
+++ b/src/Page/Employee/Employee.module.scss
@@ -1,16 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@100;200;400;500;600;700;800&family=Silkscreen:wght@400;700&display=swap');
-.container {
-    background-color: #151515;
-    min-height: calc(100vh - 50px);
-    color: #fff;
+.container_main {
+    background-color: var(--primary-bg);
+    padding-bottom: 60px;
+    margin-bottom: 260px;
 }
+.container {
+    color: var(--primary-white);
+}
+
 .content-container {
     margin-left: 50px;
 
     .feature_content {
         height: 50vh;
         background-color: red;
-        background: linear-gradient(to bottom, rgba(0, 0, 0, 0), #151515),
+        background: linear-gradient(to bottom, rgba(0, 0, 0, 0), var(--primary-bg)),
             url('https://wallpapers.com/images/featured/captain-america-uymfdo8a063hcbxb.jpg');
         object-fit: cover;
         padding: 40px;
@@ -26,7 +30,7 @@
         }
         .feature_btn {
             background-color: #4dbf00;
-            color: #fff;
+            color: var(--primary-white);
             border: none;
             outline: none;
             padding: 10px 20px;
@@ -41,9 +45,156 @@
         }
     }
 }
+.slider_film {
+    margin-bottom: 10px;
+}
 .movie-title {
     margin-left: 40px;
 }
 .movie_feature-container {
     padding: 0 40px;
+}
+
+// Movie-popular
+.movie-popular {
+    width: 100%;
+    padding-left: 80px;
+    padding-right: 30px;
+    margin: 30px auto 0 auto;
+}
+
+.movie-title-popular {
+    margin-left: 6px;
+    color: var(--primary-white);
+}
+
+// Movie Item
+.item_movie {
+    text-decoration: none;
+    display: block;
+    border-radius: 6px;
+    overflow: hidden;
+    width: 100%;
+    height: 475px;
+    box-shadow: 0 0 5px #aaaaaaaa;
+}
+.item_movie:hover {
+    box-shadow: 0 0 20px #aaaaaaaa;
+}
+.item_movie:hover .image_movie {
+    transform: scale(1.1);
+}
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+.item_image {
+    width: 100%;
+    height: 377px;
+    overflow: hidden;
+    .image_movie {
+        width: 100%;
+        height: 100%;
+        transition: all 0.2s ease-in-out;
+        object-fit: cover;
+    }
+}
+
+.infor_item-movie {
+    background-color: var(--primary-black);
+    padding: 12px 16px;
+    height: 100%;
+    .title_movie-item {
+        font-size: 18px;
+        font-weight: 700;
+        width: 120px;
+        white-space: nowrap;
+        -webkit-line-clamp: 1; /* số dòng hiển thị */
+        -webkit-box-orient: horizontal;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        color: var(--primary-white);
+        line-height: 18px;
+        margin-bottom: 4px;
+    }
+    .actor_movie-item {
+        font-size: 14px;
+        width: 20px;
+        white-space: nowrap;
+        -webkit-line-clamp: 1; /* số dòng hiển thị */
+        -webkit-box-orient: horizontal;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        color: #aaaaaa;
+        font-weight: 500;
+        line-height: 16px;
+    }
+}
+
+// Time and Stars
+.time_zone-item {
+    display: flex;
+    position: relative;
+    margin-top: 4px;
+    padding-left: 2px;
+    align-items: center;
+
+    .all_block-zone {
+        display: flex;
+        width: 100%;
+        justify-content: space-between;
+
+        .time_item {
+            display: flex;
+            align-items: center;
+            .clock_icons {
+                color: #aaaaaa;
+                margin-top: 4px;
+                margin-right: 4px;
+            }
+
+            .time {
+                margin-top: 2px;
+                font-size: 14px;
+                color: #aaaaaa;
+                font-weight: 550;
+            }
+        }
+    }
+
+    .stars_movie-item {
+        display: flex;
+        padding-left: 16px;
+        align-items: center;
+
+        .star_icon {
+            font-size: 12px;
+            color: #ffcc00;
+        }
+    }
+}
+
+@media screen and (max-width: 875px) {
+    .infor_item-movie {
+        padding: 12px;
+    }
+    .stars_movie-item {
+        padding-left: 0 !important;
+        margin-top: 4px;
+    }
+}
+// Phân trang
+.Pagination_page {
+    margin: 20px 0;
+    position: relative;
+    .item_Pagi {
+        margin: 0;
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+    }
 }
