--- a/src/Page/EmployeeCategory/EmployeeCategory.module.scss
+++ b/src/Page/EmployeeCategory/EmployeeCategory.module.scss
@@ -1,20 +1,19 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 .container_category {
-    max-width: 1200px;
-    padding-top: 20px;
-    margin: 62px auto 0 auto;
+    width: 100%;
+    padding-left: 80px;
+    padding-right: 30px;
+    margin: 30px auto 0 auto;
+    margin-bottom: 330px;
 }
 
 // Movie Item
 .item_movie {
     text-decoration: none;
     display: block;
+    border-radius: 6px;
+    overflow: hidden;
     width: 100%;
-    height: 544px;
+    height: 475px;
     box-shadow: 0 0 5px #aaaaaaaa;
 }
 .item_movie:hover {
@@ -33,7 +32,7 @@
 }
 .item_image {
     width: 100%;
-    height: 423px;
+    height: 377px;
     overflow: hidden;
     .image_movie {
         width: 100%;
@@ -44,7 +43,9 @@
 }
 
 .infor_item-movie {
-    padding: 24px;
+    background-color: var(--primary-black);
+    padding: 12px 16px;
+    height: 100%;
     .title_movie-item {
         font-size: 18px;
         font-weight: 700;
@@ -54,12 +55,18 @@
         -webkit-box-orient: horizontal;
         overflow: hidden;
         text-overflow: ellipsis;
-        color: #333;
-        margin-bottom: 0;
+        color: var(--primary-white);
         line-height: 18px;
+        margin-bottom: 4px;
     }
     .actor_movie-item {
         font-size: 14px;
+        width: 20px;
+        white-space: nowrap;
+        -webkit-line-clamp: 1; /* số dòng hiển thị */
+        -webkit-box-orient: horizontal;
+        overflow: hidden;
+        text-overflow: ellipsis;
         color: #aaaaaa;
         font-weight: 500;
         line-height: 16px;
@@ -70,12 +77,14 @@
 .time_zone-item {
     display: flex;
     position: relative;
-    padding-top: 10px;
+    margin-top: 4px;
     padding-left: 2px;
     align-items: center;
 
     .all_block-zone {
         display: flex;
+        width: 100%;
+        justify-content: space-between;
 
         .time_item {
             display: flex;
@@ -105,26 +114,15 @@
             color: #ffcc00;
         }
     }
-    .next_icon {
-        position: absolute;
-        right: -12px;
-        font-size: 20px;
-    }
 }
 
 @media screen and (max-width: 875px) {
     .infor_item-movie {
         padding: 12px;
     }
-    .all_block-zone {
-        flex-direction: column;
-    }
     .stars_movie-item {
         padding-left: 0 !important;
         margin-top: 4px;
-    }
-    .next_icon {
-        right: 2px !important;
     }
 }
 // Phân trang
