--- a/src/Page/MovieDetail/MovieDetail.module.scss
+++ b/src/Page/MovieDetail/MovieDetail.module.scss
@@ -1,13 +1,13 @@
 .DetailFilm {
-    padding-bottom: 60px;
+    padding-bottom: 40px;
     margin-left: auto;
     margin-right: auto;
     overflow: hidden;
     display: flex;
-    min-height: 185vh;
     padding-left: 49px;
     flex-direction: column;
-    background-color: #151515;
+    margin-bottom: 280px;
+    background-color: var(--primary-bg);
 }
 .top_main-image {
     width: 100%;
@@ -60,7 +60,7 @@
         justify-content: space-between;
         .name {
             padding: 0;
-            color: #fff;
+            color: var(--primary-white);
         }
 
         .btn_play {
@@ -70,17 +70,17 @@
             padding: 5px 20px;
             border-radius: 20px;
             height: 40px;
-            border: 2px solid #fff;
+            border: 2px solid var(--primary-white);
             background: transparent;
             outline: none;
             margin-right: 10px;
-            color: #fff;
+            color: var(--primary-white);
         }
 
         .stars {
             display: flex;
             align-items: center;
-            color: #fff;
+            color: var(--primary-white);
             .star_icon {
                 margin-right: 4px;
                 color: #ffcc00;
@@ -97,7 +97,7 @@
 
             .title {
                 font-size: 17px;
-                color: #fff;
+                color: var(--primary-white);
                 font-weight: 700;
                 margin-bottom: 10px;
             }
@@ -128,7 +128,7 @@
 
                 .title {
                     font-weight: 600;
-                    color: #fff;
+                    color: var(--primary-white);
                     margin-bottom: 10px;
                 }
 
@@ -184,12 +184,12 @@
             padding-left: 30px;
             .name {
                 padding: 0;
-                color: #fff;
+                color: var(--primary-white);
             }
             .stars {
                 display: flex;
                 align-items: center;
-                color: #fff;
+                color: var(--primary-white);
                 .star_icon {
                     margin-right: 4px;
                     color: yellow;
@@ -204,7 +204,7 @@
                 align-items: center;
                 text-align: center;
                 width: 110px;
-                color: #fff;
+                color: var(--primary-white);
                 background-color: #ff9966;
                 margin-top: 10px;
                 transition: background 0.5s;
@@ -234,12 +234,12 @@
             padding-left: 0;
             .name {
                 padding: 0;
-                color: #fff;
+                color: var(--primary-white);
             }
             .stars {
                 display: flex;
                 align-items: center;
-                color: #fff;
+                color: var(--primary-white);
                 .star_icon {
                     margin-right: 4px;
                     color: yellow;
@@ -252,7 +252,7 @@
                 padding: 5px;
                 text-align: center;
                 align-items: center;
-                color: #fff;
+                color: var(--primary-white);
                 background-color: #ff9966;
                 width: 110px;
                 margin-top: 10px;
@@ -333,9 +333,9 @@
         flex-direction: column;
         text-align: center;
         align-items: center;
-        background-color: black;
+        background-color: var(--primary-black);
         .title_movie-item {
-            color: #fff;
+            color: var(--primary-white);
             max-width: 160px;
             overflow: hidden;
             white-space: nowrap;
