--- a/src/Page/SingUpAndLogin/SignUpAndLogin.module.scss
+++ b/src/Page/SingUpAndLogin/SignUpAndLogin.module.scss
@@ -8,7 +8,7 @@
     margin-left: auto;
     margin-right: auto;
     height: 450px;
-    background-color: #fff;
+    background-color: var(--primary-white);
     border-radius: 5px;
     display: flex;
     z-index: 500;
@@ -22,7 +22,7 @@
 // .form_center {
 //     width: 400px;
 //     height: 500px;
-//     background-color: #fff;
+//     background-color: var(--primary-white);
 //     border-radius: 5px;
 //     position: fixed;
 //     display: flex;
@@ -38,7 +38,7 @@
         width: 280px;
         position: fixed;
         height: 500px;
-        background-color: #fff;
+        background-color: var(--primary-white);
         border-radius: 5px;
         display: flex;
         flex-direction: column;
@@ -106,7 +106,7 @@
         border-left: none;
         border-right: none;
         border-top: none;
-        border-bottom: 1px solid black;
+        border-bottom: 1px solid var(--primary-black);
         outline: none;
     }
 }
@@ -120,7 +120,7 @@
     border-radius: 6px;
     width: 100%;
     margin-top: 10px;
-    color: #fff;
+    color: var(--primary-white);
     background-color: #ff0000;
     border: none;
     outline: none;
@@ -135,7 +135,7 @@
 }
 .box_tooltip {
     background-color: #222;
-    color: #fff;
+    color: var(--primary-white);
     padding: 10px 5px;
     border-radius: 5px;
 }
@@ -162,7 +162,7 @@
     display: flex;
     align-items: center;
     text-align: center;
-    color: #fff;
+    color: var(--primary-white);
     justify-content: center;
 }
 .facebook_css {
@@ -170,14 +170,14 @@
     text-align: left;
     padding-left: 10px;
     background-color: blue;
-    color: #fff;
+    color: var(--primary-white);
     height: 40px;
 }
 .google {
     border-radius: 6px;
     margin-left: 20px;
     width: 160px;
-    color: #fff;
+    color: var(--primary-white);
     padding: 10px 5px;
     background-color: #fbbc05;
     .icon {
@@ -193,7 +193,7 @@
     max-width: 400px;
     margin: 100px auto;
     height: 300px;
-    background-color: #fff;
+    background-color: var(--primary-white);
     border-radius: 5px;
     display: flex;
     z-index: 500;
@@ -219,7 +219,7 @@
     border-radius: 6px;
     width: 100%;
     margin-top: 10px;
-    color: #fff;
+    color: var(--primary-white);
     border: none;
     outline: none;
     background-color: #0099ff;
