--- a/src/Page/TrashEmployee/TrashEmployee.module.scss
+++ b/src/Page/TrashEmployee/TrashEmployee.module.scss
@@ -1,9 +1,13 @@
+.container {
+    padding-left: 50px;
+    margin-bottom: 400px;
+}
 .trash_container {
     max-width: 1200px;
-
-    border: 1px solid black;
+    border: 1px solid var(--primary-black);
     margin: 80px auto 60px auto;
     border-radius: 5px;
+
     background-color: beige;
 }
 .list_film {
