--- a/src/Page/WatchMovie/WatchMovie.module.scss
+++ b/src/Page/WatchMovie/WatchMovie.module.scss
@@ -2,13 +2,14 @@
     overflow: hidden;
     width: 100%;
     padding-left: 50px;
-    min-height: 185vh;
     background-color: #151515;
 }
 
 .main_film {
     max-width: 962px;
     margin: 0 auto;
+    padding-bottom: 20px;
+    margin-bottom: 300px;
     background-color: #222222;
     padding-top: 10px;
     padding-left: 10px;
@@ -40,7 +41,7 @@
         width: 100%;
         max-height: 540px;
 
-        background-color: black;
+        background-color: var(--primary-black);
     }
 
     .group_setting {
@@ -50,7 +51,7 @@
         display: flex;
         justify-content: center;
         .group_btn {
-            border: 1px solid #fff;
+            border: 1px solid var(--primary-white);
             display: flex;
             padding-top: 4px;
             padding-bottom: 4px;
@@ -60,7 +61,7 @@
 
             .change_server {
                 background-color: #ff9966;
-                color: black;
+                color: var(--primary-black);
             }
             .PM_FAST {
                 color: #996600;
@@ -70,8 +71,8 @@
 
         button {
             padding: 5px;
-            background-color: black;
-            color: #fff;
+            background-color: var(--primary-black);
+            color: var(--primary-white);
             border-radius: 3px;
             border: none;
             outline: none;
@@ -107,7 +108,7 @@
         height: 100%;
         background-color: transparent;
         border: none;
-        color: #fff;
+        color: var(--primary-white);
         font-weight: 700;
         outline: none;
     }
@@ -138,7 +139,7 @@
         button {
             padding: 0px 10px;
             border-radius: 5px;
-            color: #fff;
+            color: var(--primary-white);
             background-color: #1877f2;
             margin-right: 10px;
         }
@@ -149,7 +150,7 @@
         }
 
         margin-top: 10px;
-        background-color: #fff;
+        background-color: var(--primary-white);
         color: #4267b2;
         display: flex;
         align-items: center;
@@ -167,7 +168,7 @@
         margin-bottom: 0;
     }
     .director {
-        color: #fff;
+        color: var(--primary-white);
         margin-top: 4px;
         font-size: 16px;
     }
