--- a/src/Page/SingUpAndLogin/SignUpAndLogin.module.scss
+++ b/src/Page/SingUpAndLogin/SignUpAndLogin.module.scss
@@ -189,11 +189,24 @@
 }
 
 // Form sending Email
-
 .form_sending-email {
     max-width: 400px;
     margin: 100px auto;
     height: 300px;
+    background-color: var(--primary-white);
+    border-radius: 5px;
+    display: flex;
+    z-index: 500;
+    flex-direction: column;
+    animation: fadeIn ease-in-out 0.8s;
+    padding: 20px 40px;
+    border: 1px solid #eee;
+    box-shadow: 0 0 20px #aaaaaa;
+}
+.form_change-password {
+    max-width: 400px;
+    margin: 100px auto;
+    height: 350px;
     background-color: var(--primary-white);
     border-radius: 5px;
     display: flex;
