--- a/src/Components/Layout/DefaultLayout/Header/header.module.scss
+++ b/src/Components/Layout/DefaultLayout/Header/header.module.scss
@@ -106,9 +106,22 @@
     flex-direction: column;
     border-radius: 5px;
     animation: fadeIn ease-in-out 0.5s;
+    transition: background-color 0.5s;
     .menu_setting-item {
-        padding: 5px 10px;
         color: var(--primary-black);
+        display: flex;
+        align-items: center;
+        padding: 5px 10px;
+
+        .icon {
+            font-size: 14px;
+            width: 20px;
+        }
+
+        span {
+            margin-left: 4px;
+            margin-bottom: 2px;
+        }
 
         &:hover {
             background-color: #ccc;
