handle-LikeAndUnlike-Film

--- a/src/Page/WatchMovie/WatchMovie.module.scss
+++ b/src/Page/WatchMovie/WatchMovie.module.scss
@@ -152,7 +152,7 @@
             margin-right: 10px;
         }
         // Đổi màu khi like và không like
-        .btn_like.discoloration .icon_like {
+        .btn_like.discoloration {
             background-color: #1877f2;
         }
         .number_like {
