--- a/src/Page/EmployeeCategory/EmployeeCategory.module.scss
+++ b/src/Page/EmployeeCategory/EmployeeCategory.module.scss
@@ -5,7 +5,11 @@
     margin: 30px auto 0 auto;
     margin-bottom: 330px;
 }
-
+.title_list-movie {
+    margin-left: 12px;
+    color: var(--primary-white);
+    margin-bottom: 20px;
+}
 // Movie Item
 .item_movie {
     text-decoration: none;
@@ -15,9 +19,6 @@
     width: 100%;
     height: 475px;
     box-shadow: 0 0 5px #aaaaaaaa;
-}
-.item_movie:hover {
-    box-shadow: 0 0 20px #aaaaaaaa;
 }
 .item_movie:hover .image_movie {
     transform: scale(1.1);
