--- a/src/Page/FilmNation/FilmNation.module.scss
+++ b/src/Page/FilmNation/FilmNation.module.scss
@@ -2,8 +2,10 @@
     width: 100%;
     padding-left: 80px;
     padding-right: 30px;
-    margin: 30px auto 0 auto;
-    margin-bottom: 330px;
+    padding-top: 30px;
+    margin: 0 auto 0 auto;
+    padding-bottom: 330px;
+    background-color: var(--primary-bg);
 }
 .title_list-movie {
     margin-left: 12px;
