--- a/src/Page/MovieDetail/MovieDetail.module.scss
+++ b/src/Page/MovieDetail/MovieDetail.module.scss
@@ -6,7 +6,7 @@
     display: flex;
     padding-left: 49px;
     flex-direction: column;
-    margin-bottom: 280px;
+    padding-bottom: 280px;
     background-color: var(--primary-bg);
 }
 .top_main-image {
