--- a/src/Components/GlobalStyles/GlobalStyle.scss
+++ b/src/Components/GlobalStyles/GlobalStyle.scss
@@ -10,13 +10,16 @@
 * {
     box-sizing: border-box;
     margin: 0;
-    font-family: 'Roboto', 'sans-serif';
     padding: 0;
+    font-family: 'Roboto', 'sans-serif';
 }
-
 body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+}
+ul {
+    padding: 0;
+    margin: 0;
 }
 p,
 h1,
