--- a/src/Page/YourListMovieLove/MovieLove.module.scss
+++ b/src/Page/YourListMovieLove/MovieLove.module.scss
@@ -1,117 +1,26 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@100;200;400;500;600;700;800&family=Silkscreen:wght@400;700&display=swap');
-.container_main {
-    background-color: var(--primary-bg);
-    padding-bottom: 260px;
-}
-.container {
-    color: var(--primary-white);
-}
-
-.content-container {
-    margin-left: 50px;
-
-    .feature_content {
-        background-color: #ccc;
-        width: 100%;
-        position: relative;
-        height: 90vh;
-        padding: 40px;
-
-        .thumb_nail{
-            position: absolute;
-            width: 100%;
-            left: 0;
-            top: 0;
-            height: 90vh;
-            object-fit: cover;
-        }
-        .feature_info{
-            position: absolute;
-        }
-
-        .feature_title {
-            font-size: 50px;
-            font-family: 'Silkscreen', 'sans-serif';
-        }
-        .feature_desc {
-            max-width: 500px;
-            color: lightgray;
-            margin: 30px 0;
-        }
-        .feature_btn {
-            background-color: #4dbf00;
-            color: var(--primary-white);
-            border: none;
-            outline: none;
-            padding: 10px 20px;
-            border-radius: 3px;
-            font-weight: bold;
-            cursor: pointer;
-            animation: color 0.3s;
-
-            &:hover {
-                background-color: red;
-            }
-        }
-    }
-}
-.slider_film {
-    margin-bottom: 10px;
-    margin-top: 20px;
-}
-.movie-title {
-    margin-left: 40px;
-}
-.movie_feature-container {
-    padding: 0 40px;
-}
-
-// Movie-popular
-.movie-popular {
+.container_category {
     width: 100%;
     padding-left: 80px;
     padding-right: 30px;
-    margin: 30px auto 0 auto;
+    padding-top: 30px;
+    background-color: var(--primary-bg);
+    margin: 0 auto 0 auto;
+    padding-bottom: 330px;
 }
-
-.movie-title-popular {
-    margin-left: 6px;
+.title_list-movie {
+    margin-left: 12px;
     color: var(--primary-white);
+    margin-bottom: 20px;
 }
-
 // Movie Item
 .item_movie {
     text-decoration: none;
     display: block;
-    position: relative;
     border-radius: 6px;
     overflow: hidden;
     width: 100%;
     height: 475px;
 }
-.container_play {
-    display: none;
-    position: absolute;
-    width: 55px;
-    top: 50%;
-    left: 50%;
-    transform: translateX(-50%);
-    height: 55px;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-    border: 1px solid transparent;
-    background-color: #cccc33;
-    animation: fadeIn ease-in-out 0.6s;
-    .icon_play {
-        font-size: 25px;
-        color: var(--primary-white);
-    }
-}
-.item_movie:hover .container_play {
-    display: flex;
-}
-
 .item_movie:hover .image_movie {
     transform: scale(1.1);
 }
@@ -130,7 +39,7 @@
     .image_movie {
         width: 100%;
         height: 100%;
-        transition: all 0.3s ease-in-out;
+        transition: all 0.2s ease-in-out;
         object-fit: cover;
     }
 }
@@ -150,12 +59,11 @@
         text-overflow: ellipsis;
         color: var(--primary-white);
         line-height: 18px;
+        margin-bottom: 4px;
     }
     .actor_movie-item {
         font-size: 14px;
-        width: 120px;
-        margin-top: 8px;
-        margin-bottom: 0;
+        width: 20px;
         white-space: nowrap;
         -webkit-line-clamp: 1; /* số dòng hiển thị */
         -webkit-box-orient: horizontal;
@@ -167,21 +75,12 @@
     }
 }
 
-@keyframes fadeIn {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
-}
-
 // Time and Stars
 .time_zone-item {
     display: flex;
     position: relative;
+    margin-top: 4px;
     padding-left: 2px;
-    margin-top: 8px;
     align-items: center;
 
     .all_block-zone {
